# TestC

./: .cproject  .project  CMakeLists.txt  PortInErlang.cpp  README.md  test.data
Debug/: PortInErlang  PortInErlang.d  makefile  sources.mk  subdir.mk
Debug/src/: Tp_CPlayerInfo.d  Tp_CRobotMaker.d  Tp_CStandrdIO.d  Tp_MainProcess.d  subdir.mk
Debug/src/common/: Tp_typedef.d  subdir.mk
Debug/src/proto/: ProtoTest1.pb.d  Tp_ProtobufInclude.d  lm.helloworld.pb.d  subdir.mk
src/: CMakeLists.txt  Tp_CPlayerInfo.cpp  Tp_CPlayerInfo.h  Tp_CRobotMaker.cpp  Tp_CRobotMaker.h  Tp_CStandardIO.h  Tp_CStandrdIO.c  Tp_GlobalInclude.h  Tp_MainProcess.cpp  Tp_MainProcess.h  readme.txt
src/common/: CMakeLists.txt  Tp_typedef.cpp  Tp_typedef.h
src/proto/: CMakeLists.txt  ProtoTest1.pb.cc  ProtoTest1.pb.h  ProtoTest1.proto  Tp_ProtobufInclude.cpp  Tp_ProtobufInclude.h  lm.helloworld.pb.h
